--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "mediapiar/movieapi",
     "description": "This is a task.",
+    "license": "MIT",
+    "type": "library",
     "authors": [
         {
             "name": "Mustafa Balcı",
@@ -8,7 +10,13 @@
         }
     ],
     "require": {
-        "guzzlehttp/guzzle": "^7.8",
-        "illuminate/support": "^10.23"
+        "guzzlehttp/guzzle": "^7.0.1",
+        "illuminate/support": "^8.0|^9.0|^10.0",
+        "php": "~7.0|^8.1"
+    },
+    "autoload": {
+        "psr-4": {
+            "Mediapiar\\MovieAPI\\": "src/"
+        }
     }
 }
