--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,12 @@
         "psr-4": {
             "Mediapiar\\MovieAPI\\": "src/"
         }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Mediapiar\\MovieAPI\\MovieAPIServiceProvider"
+            ]
+        }
     }
 }
